fixed a bug
 * fixed a bug that text overflows in discuss
 * fixed a bug that table overflows in page
 * fixed a text position of logo

--- a/static/css/discuss.css
+++ b/static/css/discuss.css
@@ -7,6 +7,7 @@
 .res {
     border: 1px solid black;
     border-radius: 3px;
+    word-break: break-word;
 }
 .res .r-head {
     background: #ccc;
